Addition of KNN and overall finalization of the experiments

--- a/category_prediction_sentenceBertRF.ipynb
+++ b/category_prediction_sentenceBertRF.ipynb
@@ -82,7 +82,8 @@
     "import io\n",
     "from keras_preprocessing.text import tokenizer_from_json\n",
     "from gensim.models import Word2Vec\n",
-    "from gensim.models import FastText\n"
+    "from gensim.models import FastText\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n"
    ]
   },
   {
@@ -338,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "2b777af2",
    "metadata": {},
    "outputs": [
@@ -358,8 +359,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6eb83449",
+   "execution_count": 14,
+   "id": "074aa34e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "4f0d6de6",
    "metadata": {},
    "outputs": [
@@ -426,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "id": "a6b99ea5",
    "metadata": {},
    "outputs": [],
@@ -440,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "id": "e9c734b8",
    "metadata": {},
    "outputs": [],
@@ -449,7 +450,7 @@
     "    sentences = data[\"Vulnerability\"].tolist()\n",
     "\n",
     "    sequences = [tokenizer.encode(sente, truncation=True, max_length=512, padding=\"max_length\", add_special_tokens=False, return_tensors=\"tf\") for sente in sentences]\n",
-    "    embeddings = [codebert(sequence)[0][:, 0, :].numpy() for sequence in sequences]  # Extract embeddings from BERT's output\n",
+    "    embeddings = [bert(sequence)[0][:, 0, :].numpy() for sequence in sequences]  # Extract embeddings from BERT's output\n",
     "    extracted_embeddings = [arr[0] for arr in embeddings]\n"
    ]
   },
@@ -463,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "id": "8be0cc47",
    "metadata": {},
    "outputs": [
@@ -488,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "id": "02135a9f",
    "metadata": {},
    "outputs": [],
@@ -519,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 20,
    "id": "613fd054",
    "metadata": {},
    "outputs": [],
@@ -562,7 +563,7 @@
     "#         Y_train=np.array(newTrain.iloc[:, -1 ])\n",
     "#         Y_train=pd.DataFrame(Y_train)\n",
     "        \n",
-    "        if userModel == \"svm\":\n",
+    "        if userModel == \"SVM\":\n",
     "            myModel = SVC(kernel='rbf', gamma=100)\n",
     "        elif userModel == \"RF\":\n",
     "            myModel = RandomForestClassifier(n_estimators=100, bootstrap = True, max_features = 'sqrt')\n",
@@ -570,6 +571,8 @@
     "            myModel = tree.DecisionTreeClassifier(max_depth=120)\n",
     "        elif userModel == \"NB\":\n",
     "            myModel = GaussianNB()\n",
+    "        elif userModel == \"KNN\":\n",
+    "            myModel = KNeighborsClassifier(n_neighbors=1)\n",
     "            \n",
     "        myModel.fit(X_train, Y_train.ravel())\n",
     "        \n",
@@ -605,8 +608,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "2d62cba2",
+   "execution_count": 21,
+   "id": "24a43ac1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 22,
    "id": "f8488cef",
    "metadata": {},
    "outputs": [
@@ -884,7 +887,7 @@
       "   macro avg       0.88      0.73      0.78       452\n",
       "weighted avg       0.84      0.81      0.81       452\n",
       "\n",
-      "Cross Validation is completed after 50724\n",
+      "Cross Validation is completed after 49815\n",
       "accuracy: 80.77% (1.49%)\n",
       "precision: 87.60% (1.31%)\n",
       "recall: 72.98% (2.72%)\n",
